--- a/src/assets/css/components/_header.scss
+++ b/src/assets/css/components/_header.scss
@@ -2,9 +2,6 @@
 @use './mixins' as *;
 
 header{
-    position: relative;
-
-    position: relative;
 
     a:not(.hbg){
         @extend %fontUderzo;
@@ -18,11 +15,7 @@ header{
         text-align: center;
         text-transform: uppercase;
         will-change: color;
-<<<<<<< HEAD
-        transition: color var(--transition-time) ease;
-=======
         transition: color .5s ease;
->>>>>>> dev
 
         &:hover{
             color: var(--yellow);
@@ -34,13 +27,7 @@ header{
     }
 
     .logo_search{
-<<<<<<< HEAD
-        padding: 2rem 13rem;
-        display: flex;
 
-        & > *{
-            flex: 1;
-=======
         padding: 3rem 13rem;
         display: flex;
 
@@ -73,7 +60,6 @@ header{
                 will-change: top;
                 transition: top .5s ease .6s, transform .5s ease, opacity .1s ease .6s;
             }
->>>>>>> dev
         }
     }
 
@@ -96,6 +82,37 @@ header{
 
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @include query(sm){
 
     header{
@@ -107,7 +124,9 @@ header{
             }
 
             .hbg span{
+
                 transition: top .5s ease, transform .5s .6s, opacity .1s .6s;
+
                 &:nth-child(2){
                     opacity: 0;
                 }
@@ -128,9 +147,12 @@ header{
             
         }
 
+
+
         a:not(.hbg){
             text-align: left;
             padding-inline: 0;
+            padding-block: 1rem;
         }
 
         .mobile_langs_search{
@@ -147,139 +169,34 @@ header{
             overflow: hidden;
             padding-block:0;
             will-change: max-height;
-            transition: max-height .5s ease;
-
-            br{
-                display: none;
-            }
-
-            .container{
-                flex-flow: column;
-                width: 90%;
-                align-items: stretch;
-                padding-block: 1rem;
-
-                & a:not(:last-child){
-                    border-right: none;
-                    border-bottom: var(--white) 1px solid;
-                    padding-bottom: 1rem;
-                }
-            }
-        }
-
-    .search_langs_mobile{
-        display: flex;
-        justify-content: end;
-
-        .hbg{
-            --first:10px;
-            display: none;
-            height: 40px;
-            width: 40px;
-            border-radius: 100%;
-            background-color: var(--blue);
-            position: relative;
-
-            
-
-            span{
-                width: 50%;
-                height: 2px;
-                left:0;
-                right: 0;
-                margin-inline: auto;
-                background-color: var(--white);
-                position: absolute;
-            }
-
-            :last-child,
-            :nth-child(2){
-                top: calc( (var(--pos)  * 5px)  + var(--first));
-            }
-
-            :first-child{
-                top: calc( var(--first) );
-            }
-        }
-
-    }
-
-
-    }
-
-}
-
-
-
-
-
-@include query(xs){
-
-    header{
-
-        &.open  nav{
-            max-height: 500px;
-            overflow: hidden;
-
-            .container{
-                padding-block: 1rem;
-                transition: none;
-            }
-        }
-
-        a{
-            text-align: left;
-            br{
-                display: none;
-            }
-        }
-
-        .logo_search{
-            padding: 3rem;
-            flex-flow: column;
-        }
-
-        .logo{
-            margin-inline: auto;
-            width: 100%;
-            max-width: 200px;
-            min-width: 200px;
-        }
-        
-        nav{
-            max-height: 0;
-            padding: 0;
-            overflow: hidden;
-            position: absolute;
-            width: 100%;
-            will-change: max-height;
             transition: max-height var(--transition-time) ease;
+            z-index: 10;
+            
+
+            br{
+                display: none;
+            }
 
             .container{
-                gap:1rem;
                 flex-flow: column;
+                width: 95%;
                 align-items: stretch;
-                width: 100%;
-                transition: padding .1s linear calc( var(--transition-time) + .1s );
+                padding-block: 1rem;
 
                 & a:not(:last-child){
                     border-right: none;
                     border-bottom: var(--white) 1px solid;
-                    padding-bottom: 1rem;
+                    
                 }
             }
-            
         }
 
 
-        .search_langs_mobile{
-            order: -1;
-
-            .hbg{
-                display: block;
-            }
-        }
-
-        
     }
+
 }
+
+
+
+
+
