cards + newsletter section

--- a/src/assets/css/components/_hero-1.scss
+++ b/src/assets/css/components/_hero-1.scss
@@ -3,6 +3,7 @@
 .hero-1{
     color: var(--white);
     background-color: var(--blue);
+    position: relative;
 
     .content{
         height: 100%;
@@ -17,6 +18,16 @@
         font-weight: 400;
     }
 
+    &::after{
+        content: '';
+        position: absolute;
+        height: 300px;
+        width: 100%;
+        top:98%;
+        left:0;
+        clip-path: polygon(0 0, 100% 0%, 100% 70%, 0% 100%);
+        background-color: var(--blue);
+    }
 
 }
 
