--- a/src/assets/css/components/_fonts.scss
+++ b/src/assets/css/components/_fonts.scss
@@ -33,9 +33,27 @@
     font-family:UderzoTitre, sans-serif;
 }
 
+%fw400{
+    font-weight: 400;
+}
+
 .h1{
     @extend %fontUderzo;
+    @extend %fw400;
     font-size: 6.5rem;
-    font-weight: 400;
     line-height: 5.5rem;
+}
+
+.h2{
+    @extend %fontUderzo;
+    font-size: 4.5rem;
+    @extend %fw400;
+    line-height: 4rem;
+}
+
+.h3{
+    @extend %fontUderzo;
+    font-size: 2.3rem;
+    font-weight: 500;
+    line-height: 2.4rem;
 }
