page: detail personnage

--- a/src/assets/css/components/_hero-1.scss
+++ b/src/assets/css/components/_hero-1.scss
@@ -12,6 +12,10 @@
         justify-content: center;
     }
 
+    figure{
+        text-align: center;
+    }
+
 
     p{
         font-size: 1.9rem;
