--- a/src/assets/css/components/_card-2.scss
+++ b/src/assets/css/components/_card-2.scss
@@ -11,6 +11,7 @@
             height: 120px;
             width: 120px;
             border-radius: 100%;
+            object-position: center;
         } 
    }
 
