--- a/src/assets/css/components/_fonts.scss
+++ b/src/assets/css/components/_fonts.scss
@@ -53,6 +53,13 @@
 
 .h3{
     @extend %fontUderzo;
+    font-size: 3rem;
+    @extend %fw400;
+    line-height: 4rem;
+}
+
+.h4{
+    @extend %fontUderzo;
     font-size: 2.3rem;
     font-weight: 500;
     line-height: 2.4rem;
